<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">童樂</string>
    <string name="weekend">周末</string>
    <string name="free">免費</string>
    <string name="hot">熱門</string>
    <string name="near">附近</string>
    <string name="recommand">推薦</string>
    <string name="search">尋找</string>
    <string name="region">地區</string>
    <string name="calendar">日曆</string>
    <string name="category">類型</string>
    <string name="collection">收藏</string>
    <string name="share">分享</string>
    <string name="time">時間:</string>
    <string name="address">地點:</string>
    <string name="price">價錢:</string>
    <string name="holder">主辦單位:</string>
    <string name="onsale_01">超級</string>
    <string name="onsale_02">優惠</string>
    <string name="description">更多描述</string>
    <string name="extend">展開看更多</string>
    <string name="fitage">適合年齡:</string>
    <string name="add">恭喜你收藏成功，可以在"我的"裡面找到這些資訊呦</string>
    <string name="wechat">微信</string>
    <string name="weibo">微博</string>
    <string name="facebook">facebook</string>
    <string name="friends">朋友圈</string>
    <string name="message">簡訊</string>
    <string name="mail">郵件</string>
    <string name="share_title">分享這個資訊</string>
    <string name="interested">感興趣</string>
    <string name="man">人</string>
    <string name="loading">載入中</string>
    <string name="network_error">網路發生錯誤</string>

    <string-array name="regions">
        <item>臺北市</item>
        <item>新北市</item>
        <item>桃園市</item>
        <item>臺中市</item>
        <item>臺南市</item>
        <item>高雄市</item>
        <item>宜蘭縣</item>
        <item>新竹縣</item>
        <item>苗栗縣</item>
        <item>彰化縣</item>
        <item>南投縣</item>
        <item>雲林縣</item>
        <item>嘉義縣</item>
        <item>屏東縣</item>
        <item>臺東縣</item>
        <item>花蓮縣</item>
        <item>澎湖縣</item>
        <item>基隆市</item>
        <item>新竹市</item>
        <item>嘉義市</item>
        <item>金門縣</item>
        <item>連江縣</item>
    </string-array>

</resources>