<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/headline"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_margin="6.67dp"
            fresco:placeholderImage="@color/black"
            fresco:roundedCornerRadius="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6.67dp" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6.67dp"
                android:layout_weight="1"
                android:background="@drawable/btn_weekend"
                android:text="@string/weekend" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6.67dp"
                android:layout_weight="1"
                android:background="@drawable/btn_hot"
                android:text="@string/free" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6.67dp"
                android:layout_weight="1"
                android:background="@drawable/btn_free"
                android:text="@string/hot" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6.67dp"
                android:layout_marginRight="6.67dp"
                android:layout_weight="1"
                android:background="@drawable/btn_near"
                android:text="@string/near" />
        </LinearLayout>

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="23.33dp" />
    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="46.67dp"
        android:layout_alignParentBottom="true"
        layout="@layout/footer" />

</RelativeLayout>